--- a/settings.gradle
+++ b/settings.gradle
@@ -10,7 +10,9 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
+
 }
 rootProject.name = "Bajaj JH and PM"
 include ':app'
